test/null-check/violations/Ptr3Bad.txt
[31mSafety Violation[00m: Use of potentially null pointer in load at Ptr3Bad.cc:14
clang++-17: error: clang frontend command failed with exit code 2 (use -v to see invocation)
